--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Leksands Superstars</h1>
         <hr>
         <div class="innehåll">
-        <h2> <a href="http://127.0.0.1:5500/Leksand%20medlem.html"> Klicka här för att bli medlem idag!</a></h2>
+        <h2> <a href="Leksand medlem.html"> Klicka här för att bli medlem idag!</a></h2>
         <h3><b>Varför bör jag gå med?</b></h3>
         <p class="TEST">Leksand Superstars är supporterklubben till Leksands IF. Klubben hjälper Leksands IF med klackverksamhet m.m, där kamapnjen Drömliraren är en av de.
          Superstars erbjuder även en stark gemenskap, stolthet och fulsatta läktare med blå/vita färger</p>
